[metadata]
name = depfinder
description = Find all the imports in your library
author = Eric Dill
author_email = thedizzle@gmail.com
url = http://github.com/ericdill/depfinder
long_description_content_type = text/markdown
long_description = file: README.md
license = BSD-3-Clause
license_file = LICENSE
project_urls =
    Documentation = https://ericdill.github.io/depfinder
    Bug Tracker = https://github.com/ericdill/depfinder/issues
    Source Code = https://github.com/ericdill/depfinder

[options]
zip_safe = True
include_package_data = True
install_requires =
    pyyaml
    stdlib-list; python_version < "3.10"
    requests
python_requires = >=2.7
packages = find:

[options.entry_points]
console_scripts =
    depfinder = depfinder.cli:cli

[flake8]
max-line-length=300
